syntax = "proto3";

package iis;

// import "common_ui.proto";

option java_package = "com.digitald4.iis.proto";
option java_outer_classname = "IISUIProtos";

enum UserRoleUI {
	UR_UNASSIGNED = 0;
	UR_NURSE = 12;
	UR_USER = 13;
	UR_ADMIN = 14;
}

enum DeductionType {
  DT_UNKNOWN = 0;
  DT_PRETAX = 1;
  DT_TAX = 2;
  DT_POSTTAX = 3;
}

message GPSAddress {
  string address = 1;
  double latitude = 2;
  double longitude = 3;
  string unit = 4;
}

message DataFile {
  int32 id = 1;
  string name = 2;
  string type = 3;
  int32 size = 4;
}

message ClosestNursesRequest {
  double latitude = 1;
  double longitude = 2;
  int32 limit = 3;
}

message NurseUI {
  //Fields from User.
  int32 id = 1;
  string user_name = 3;
  string email = 4;
  string first_name = 5;
  string last_name = 6;
  string full_name = 7;
  bool disabled = 8;
  bool read_only = 9;
  string notes = 10;
  int64 last_login = 11;

  int64 reg_date = 20;
  GPSAddress address = 21;
  string phone_number = 22;
  string referral_source = 23;
  double pay_flat = 24;
  double pay_rate = 25;
  double pay_flat_2hr_soc = 26;
  double pay_rate_2hr_soc = 27;
  double pay_flat_2hr_roc = 28;
  double pay_rate_2hr_roc = 29;
  double mileage_rate = 30;
  int32 status_id = 31;

  // The distance this nurse is from some origin that was passed in.
  double distance = 19;
}

message LicenseUI {
  int32 id = 1;
  int32 nurse_id = 2;
  string nurse_name = 3;
  int32 lic_type_id = 4;
  string lic_type_name = 5;
  string number = 6;
  int64 valid_date = 7;
  int64 expiration_date = 8;
  DataFile data_file = 9;
}

message PatientUI {
  int32 id = 1;
  int64 referral_date = 2;
  int32 referral_source_id = 3;
  int32 referral_source_name = 4;
  int32 billing_id = 5;
  string billing_vendor_name = 6;
  string name = 7;
  string mr_num = 8;
  int64 d_o_b = 9;
  int32 dianosis_id = 10;
  int32 therapy_type_id = 11;
  int32 i_v_access_id = 12;
  int64 start_of_care_date = 13;
  GPSAddress service_address = 14;
  string phone_number = 15;
  int32 primary_phone_type_id = 16;
  string alt_contact_number = 17;
  int32 alt_phone_type_id = 18;
  string emergency_contact = 19;
  string emergency_contact_phone = 20;
  string emergency_contact_phone_type_id = 21;
  string rx = 22;
  int64 est_last_day_of_service = 23;
  bool labs = 24;
  string labs_frequency = 25;
  int64 first_recert_due = 26;
  int64 d_c_date = 27;
  bool info_in_s_o_s = 28;
  string scheduling_preference = 29;
  string referral_note = 30;
  int32 referral_resolution_id = 31;
  int64 referral_resolution_date = 32;
  string referral_resolution_note = 33;
  int64 vendor_confirmation_date = 34;
  int64 nurse_confirmation_date = 35;
  int64 patient_confirmation_date = 36;
  int64 meds_delivery_date = 37;
  int64 meds_confirmation_date = 38;
  bool active = 39;
  string description = 40;
  double billing_rate = 41;
  double billing_rate_2hr_soc = 42;
  double billing_rate_2hr_roc = 43;
  double billing_flat = 44;
  double billing_flat_2hr_soc = 45;
  double billing_flat_2hr_roc = 46;
  double mileage_rate = 47;
  int32 patient_status_id = 48;
}

message VendorUI {
	int32 id = 1;
	string name = 2;
	GPSAddress address = 3;
	string phone_number = 4;
	string fax_number = 5;
	string contact_name = 6;
	string contact_number = 7;
	string contact_email = 8;
	bool active = 9;
	double billing_rate = 10;
	double billing_rate_2hr_soc = 11;
	double billing_rate_2hr_roc = 12;
	double billing_flat = 13;
	double billing_flat_2hr_soc = 14;
	double billing_flat_2hr_roc = 15;
	double mileage_rate = 16;
	string notes = 17;
}

message InvoiceUI {
  int32 id = 1;
  int32 vendor_id = 2;
  string name = 3;
  int64 generation_time = 4;
  int32 status_id = 5;
  repeated int32 appointment_id = 6;
  double logged_hours = 7;
  double standard_billing = 8;
  double mileage = 9;
  double billed_mileage = 10;
  double total_due = 11;
  double total_paid = 12;
  string comment = 13;
  DataFile data_file = 14;
  double logged_hours_y_t_d = 15;
  double standard_billing_y_t_d = 16;
  double mileage_y_t_d = 17;
  double billed_mileage_y_t_d = 18;
  double billed_y_t_d = 19;
}

message NotificationRequest {
  int64 start_date = 1;
  int64 end_date = 2;
  string entity = 3;
  int32 entity_id = 4;
}

message Notification {
  enum Type {
    NT_UNKNOWN = 0;
    NT_INFO = 1;
    NT_WARNING = 2;
    NT_ERROR = 3;
  }
  Type type = 1;
  string title = 2;
  int64 date = 3;
  string entity = 4;
  int32 entity_id = 5;
}